--- a/s3_storage_creation.yml
+++ b/s3_storage_creation.yml
@@ -10,3 +10,7 @@ BucketCanuto:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
               SSEAlgorithm: AES256
+
+
+
+## teste
