--- a/s3_storage_creation.yml
+++ b/s3_storage_creation.yml
@@ -1,12 +1,16 @@
 Description: Cria bucket S3
-
 Resources:
 
-BucketCanuto:
-  Type: AWS::S3::Bucket
-  Properties: 
-    BucketName: bucket-fcanuto
-    BucketEncryption: 
-        ServerSideEncryptionConfiguration:
-          - ServerSideEncryptionByDefault:
-              SSEAlgorithm: AES256
+  BucketCanuto:
+    Type: AWS::S3::Bucket
+    Properties: 
+      BucketName: bucket-fcanuto
+      BucketEncryption: 
+          ServerSideEncryptionConfiguration:
+            - ServerSideEncryptionByDefault:
+                SSEAlgorithm: AES256
+      PublicAccessBlockConfiguration:
+          BlockPublicAcls: True
+          BlockPublicPolicy: True
+          IgnorePublicAcls: True
+          RestrictPublicBuckets: True
